frame/support/test/tests/construct_runtime_ui/missing_where_param.stderr
error: Missing associated type for `UncheckedExtrinsic`. Add `UncheckedExtrinsic` = ... to where section.
 --> $DIR/missing_where_param.rs:7:2
  |
7 |     {}
  |     ^^
